# Memory-Keeper

./: .gitignore  01-high-level-plan.md  02-implementation-plan.md  LICENSE  README.md  config.example.yaml  memory-keeper-implementation-plan.md  pyproject.toml
adapters/sillytavern/: index.js  manifest.json  style.css
memory_keeper/: __init__.py  config.py  main.py  presets.py
memory_keeper/analyzer/: __init__.py  arc_extractor.py  character_analyzer.py  drift_detector.py  embeddings.py  fact_extractor.py  llm_client.py  narrator_analyzer.py  narrator_drift_detector.py  relationship_extractor.py  state_consolidator.py
memory_keeper/analyzer/prompts/: __init__.py  arc_extraction.md  character_extraction.md  drift_detection.md  fact_extraction.md  narrator_drift_detection.md  narrator_extraction.md  relationship_extraction.md  state_consolidation.md
memory_keeper/api/: __init__.py  context_formatter.py  pipeline.py  schemas.py  server.py
memory_keeper/api/routes/: __init__.py  arcs.py  characters.py  consolidation.py  drift.py  facts.py  memory.py  messages.py  relationships.py  search.py  sessions.py  snapshots.py
memory_keeper/migrations/: __init__.py
memory_keeper/session/: __init__.py
memory_keeper/store/: __init__.py  base.py  models.py  postgres_store.py  sqlite_store.py
memory_keeper/utils/: __init__.py  logging.py
scripts/: install.bat  install.sh
tests/: __init__.py  test_config.py
tests/test_analyzer/: test_analyzers.py  test_consolidator.py  test_llm_client.py  test_narrator_drift.py
tests/test_api/: test_arcs.py  test_auto_snapshot.py  test_context_formatter.py  test_rollback.py  test_routes.py  test_search.py
tests/test_integration/: test_pipeline_e2e.py
tests/test_store/: test_clear_session.py  test_postgres_store.py  test_sqlite_store.py
